# PlexMIOC

./: .dockerignore  .gitignore  Dockerfile  config.py  constants.py  docker_compose.yaml  log_handler.py  main.py  pyproject.toml  requirements.txt  scan.py
config/: config.ini
