[tool.poetry]
name = "plexmioc"
version = "0.1.0"
description = ""
authors = ["Derek Bowes <db@bowesmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymediainfo = "^5.1.0"
Pillow = "^10.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
